# raylib-starter-project

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: foo.c  foo.cpp  foo.h  main.c  main.cpp
src/tests/: CMakeLists.txt  README.md  tests_foo.cpp
